made it responsive

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             </nav>
 
         </header>
+        
         <main>
             <section class="index-banner">
                 <div class="vertical-center">
@@ -25,6 +26,7 @@
                     <h1>With specialty in back-end development, functionality, UX design, and search engine optimization</h1>
                 </div>
             </section>
+            <div class="wrapper">
             <section class="index-links">
             <a href="cases.html">
                 <div class="index-boxlink-square">
@@ -88,5 +90,6 @@
                 </a>
             </div>
         </footer>
+    </div>
     </body>
 </html>
